add colab badge

--- a/code/NO2_From_GEE_SEA.ipynb
+++ b/code/NO2_From_GEE_SEA.ipynb
@@ -8,12 +8,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Install geemap"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#conda install geemap"
+    "#install geemap first when running in Colab or new environment\n",
+    "#pip install geemap"
    ]
   },
   {
