--- a/code/NO2_From_GEE_SEA.ipynb
+++ b/code/NO2_From_GEE_SEA.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "\n",
     "\n",
-    "## Import libraries"
+    "## Import Libraries"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## explore geemap "
+    "## Import Study Area (South-East Asia) Points"
    ]
   },
   {
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## create a loop"
+    "## Create A Loop to Export Daily Means"
    ]
   },
   {
