add SI and case number

--- a/code/MLP_Explainability.ipynb
+++ b/code/MLP_Explainability.ipynb
@@ -700,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# group by date, agg to mean\n",
+    "# group by month, agg to mean\n",
     "merge_by_month_location = merge.groupby(['year','month', 'country','lon','lat']).mean().reset_index()\n",
     "merge_by_month_location"
    ]
