--- a/code/5219_MLP_Explainability.ipynb
+++ b/code/5219_MLP_Explainability.ipynb
@@ -89,10 +89,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "214b60d0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# see some statistics\n",
+    "# view overall statistics\n",
     "merge_original.describe()"
    ]
   },
@@ -100,12 +102,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "411f6985",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# see the distribution of data\n",
-    "fig1 = px.histogram(merge_original, x=\"NO2\")\n",
-    "fig1.show()"
+    "fig = px.histogram(merge_original, x=\"NO2\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -116,8 +120,8 @@
    "outputs": [],
    "source": [
     "# see the distribution of data\n",
-    "fig2 = px.histogram(merge_original, x=\"facebook_movement\")\n",
-    "fig2.show()"
+    "fig = px.histogram(merge_original, x=\"facebook_movement\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -128,16 +132,14 @@
    "outputs": [],
    "source": [
     "# for highly screwed output, remove outliers, as well as remove noise in facebook mobility input\n",
-    "merge = merge_original.loc[(merge_original['NO2'] > 1e-6) & (merge_original['NO2']< 0.0001) & (merge_original['facebook_movement'] > 50)]"
+    "merge = merge_original.loc[(merge_original['NO2'] > 1e-6) & (merge_original['facebook_movement'] > 50)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9c432cef",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# add in a new column, wind speed\n",
@@ -197,8 +199,8 @@
    "outputs": [],
    "source": [
     "# show correlation in heatmap, hover and see clear values\n",
-    "fig3 = px.imshow(corr, text_auto=True, width=1000, height=1000)\n",
-    "fig3.show()"
+    "fig = px.imshow(corr, text_auto=True, width=700, height=700)\n",
+    "fig.show()"
    ]
   },
   {
@@ -208,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig4 = px.histogram(merge, x=\"NO2\")\n",
-    "fig4.show()"
+    "fig = px.histogram(merge, x=\"NO2\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -219,8 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig5 = px.histogram(merge, x=\"log_NO2\")\n",
-    "fig5.show()"
+    "fig = px.histogram(merge, x=\"log_NO2\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -230,8 +232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig6 = px.histogram(merge, x=\"log_facebook_movement\")\n",
-    "fig6.show()"
+    "fig = px.histogram(merge, x=\"log_facebook_movement\")\n",
+    "fig.show()"
    ]
   },
   {
@@ -241,7 +243,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge.to_csv(r'D:\\GitHub\\NO2-in-South-East-Asia-_GE5219\\data\\Preprocessed_data_ML.csv')"
+    "# save the preprocessed data to csv\n",
+    "# merge.to_csv(r'D:\\GitHub\\NO2-in-South-East-Asia-_GE5219\\data\\Preprocessed_data_ML.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07238bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see how facebook mobility changes with time in indonesia, color shows NO2 levels\n",
+    "fig = px.scatter(merge[merge['country']=='Indonesia'], x='date', y='log_facebook_movement', color='log_NO2')\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d380175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see how no2 changes with time in indonesia, color shows facebook mobility\n",
+    "fig = px.scatter(merge[merge['country']=='Indonesia'], x='date', y='log_NO2', color='log_facebook_movement')\n",
+    "fig.show()"
    ]
   },
   {
@@ -348,6 +375,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b49db914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "516f919b",
    "metadata": {},
    "outputs": [],
@@ -378,15 +415,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "115379c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if a model was trained and saved, can directly load here\n",
+    "model = load_model('MLP_all_mobility.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a2d8d2a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testing error\n",
-    "# as we transformed the NO2 when training, so we need to transform back to see the error in originall scale\n",
+    "# print root mean square error and mean absolute error for testing dataset (original data)\n",
     "mse_test = mse(pow(10,y_test)*1e-7,pow(10,model.predict(X_test))*1e-7)\n",
     "print(mse_test**0.5)\n",
     "print(mae(pow(10,y_test)*1e-7,pow(10,model.predict(X_test))*1e-7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242d9c99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print root mean square error and mean absolute error for testing dataset\n",
+    "mse_test_0 = mse(y_test,model.predict(X_test))\n",
+    "print(mse_test_0**0.5)\n",
+    "print(mae(y_test,model.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b4bac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_train_0 = mse(y_train,model.predict(X_train))\n",
+    "print(mse_train_0**0.5)\n",
+    "print(mae(y_train,model.predict(X_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d2f1060",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(r2_score(y_train,model.predict(X_train)))\n",
+    "print(r2_score(y_test,model.predict(X_test)))"
    ]
   },
   {
@@ -396,8 +479,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# training error\n",
-    "# as we transformed the NO2 when training, so we need to transform back to see the error in originall scale\n",
     "mse_train = mse(pow(10,y_train)*1e-7,pow(10,model.predict(X_train))*1e-7)\n",
     "print(mse_train**0.5)\n",
     "print(mae(pow(10,y_train)*1e-7,pow(10,model.predict(X_train))*1e-7))"
@@ -410,7 +491,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# r2\n",
     "print(r2_score(pow(10,y_train)*1e-7,pow(10,model.predict(X_train))*1e-7))\n",
     "print(r2_score(pow(10,y_test)*1e-7,pow(10,model.predict(X_test))*1e-7))"
    ]
@@ -423,7 +503,6 @@
    "outputs": [],
    "source": [
     "# plot predicted and ground_truth NO2\n",
-    "# testing data\n",
     "plt.scatter(pow(10,y_test)*1e-7,pow(10,model.predict(X_test))*1e-7)\n",
     "plt.xlabel('NO2_test')\n",
     "plt.ylabel('NO2_test_predicted')\n",
@@ -438,11 +517,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot predicted and ground_truth transformed NO2\n",
-    "# testing data\n",
+    "#plot predicted and ground_truth log(NO2)\n",
     "plt.scatter(y_test,model.predict(X_test))\n",
-    "plt.xlabel('NO2_test')\n",
-    "plt.ylabel('NO2_test_predicted')\n",
+    "plt.xlabel('log_NO2_test')\n",
+    "plt.ylabel('log_NO2_test_predicted')\n",
     "plt.ylim(1,3)\n",
     "plt.xlim(1,3)"
    ]
@@ -456,8 +534,8 @@
    "source": [
     "#plot predicted and ground_truth log(NO2) in training set\n",
     "plt.scatter(y_train,model.predict(X_train))\n",
-    "plt.xlabel('NO2_train')\n",
-    "plt.ylabel('NO2_train_predicted')\n",
+    "plt.xlabel('log_NO2_train')\n",
+    "plt.ylabel('log_NO2_train_predicted')\n",
     "plt.ylim(1,3)\n",
     "plt.xlim(1,3)"
    ]
@@ -477,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a error dataframe to store error values\n",
+    "# calculate error in testing dataset\n",
     "test_error = pd.DataFrame(columns = [])\n",
     "test_error['log_NO2'] = y_test['log_NO2']\n",
     "test_error['prediction'] = model.predict(X_test)\n",
@@ -493,7 +571,9 @@
    "outputs": [],
    "source": [
     "# see error distribution\n",
-    "plt.hist(test_error['error'], bins='auto')  \n",
+    "plt.hist(test_error['error'], bins='auto')\n",
+    "plt.xlabel('log_NO2_test_error')\n",
+    "plt.ylabel('count')\n",
     "plt.title(\"Histogram of prediction error\")\n",
     "plt.show()"
    ]
@@ -515,6 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define large error >0.5 or <-0.5\n",
     "# add a column indicating wether the error is large or not\n",
     "test_error['large_err'] = test_error.apply(lambda x: (x['error'] < -0.5)|(x['error'] > 0.5), axis = 1)\n",
     "test_error"
@@ -599,17 +680,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81050dab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this is global interpretation that show the distribution of the impact of each variable \n",
-    "shap.summary_plot(shap_values[0], feature_names = feature_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6e5a0825",
    "metadata": {},
    "outputs": [],
@@ -626,26 +696,6 @@
    "outputs": [],
    "source": [
     "shap.dependence_plot('apple_driving', shap_values[0], X_test[:5000], interaction_index = 'apple_walking', feature_names = feature_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ae48df4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shap.dependence_plot('day', shap_values[0], X_test[:5000], interaction_index = 'log_facebook_movement', feature_names = feature_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebb8714a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shap.dependence_plot('log_facebook_movement', shap_values[0], X_test[:5000], interaction_index = 'day', feature_names = feature_names)"
    ]
   },
   {
@@ -688,6 +738,7 @@
    },
    "outputs": [],
    "source": [
+    "# add in column with year and another with month\n",
     "merge['month'] = merge['date'].dt.month\n",
     "merge['year'] = merge['date'].dt.year\n",
     "merge"
@@ -740,89 +791,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5bbe1a5b",
+   "metadata": {},
+   "source": [
+    "### Indonesia"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db72482",
+   "id": "2be1791b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "merge_by_month_B_N = merge_by_month_location[feature_names]"
+    "df_ID = merge[merge['country']=='Indonesia']\n",
+    "df_ID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78433821",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merge_by_month_N = sc_X.transform(merge_by_month_B_N)\n",
-    "merge_by_month_N"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32aedae3",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merge_by_month_y = merge_by_month_location[['log_NO2']]\n",
-    "merge_by_month_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b07ff34",
+   "id": "08dc34e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap_values_month = explainer.shap_values(merge_by_month_N[:5000])"
+    "fig = px.scatter(df_ID, x='date', y='log_NO2', color='log_facebook_movement')\n",
+    "fig.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a331e45a",
+   "id": "4c1ccf36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.summary_plot(shap_values_month[0], plot_type = 'bar', feature_names = feature_names)"
+    "df_ID_date = df_ID[(df_ID['date']>='2021-03-01')&(df_ID['date']<='2021-03-31')]\n",
+    "df_ID_date"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438e773d",
+   "id": "de4c2b98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shap.summary_plot(shap_values_month[0], feature_names = feature_names)"
+    "# X include all input values\n",
+    "before_normalized_X_ID = df_ID_date[['lon','lat','day', 'rainfall','u-wind', 'v-wind', 'wind_speed', 'surface-p', 'dew-pt', '2m-temp', 'facebook_movement', 'log_facebook_movement', 'apple_driving', 'apple_walking', 'haze']]\n",
+    "before_normalized_X_ID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69b3e0cd",
+   "id": "f44e0279",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# shap.summary_plot(shap_values, feature_names = feature_names)\n",
-    "shap.dependence_plot('log_facebook_movement', shap_values_month[0], merge_by_month_N[:5000], interaction_index = 'apple_driving', feature_names = feature_names)"
+    "after_normalized_X_ID = sc_X.transform(before_normalized_X_ID)\n",
+    "after_normalized_X_ID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb54fe1",
+   "id": "9a6c931c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shap_values_ID = explainer.shap_values(after_normalized_X_ID)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9d88b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.summary_plot(shap_values_ID[0], plot_type = 'bar', feature_names = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac28a3b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.dependence_plot('log_facebook_movement', shap_values_ID[0], after_normalized_X_ID, interaction_index = 'apple_driving', feature_names = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcfcdcda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.dependence_plot('apple_walking', shap_values_ID[0], after_normalized_X_ID, interaction_index = 'apple_driving', feature_names = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3135fea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(merge[merge['country']=='Indonesia'], x='date', y='log_facebook_movement', color='log_NO2', hover_data = ['lon','lat'])\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c051103",
+   "metadata": {},
+   "source": [
+    "### Explain on high NO2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fc49f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = merge[(merge['log_NO2']>2.48)&(merge['log_NO2']<2.5)]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "890349de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X include all input values\n",
+    "before_normalized_X_2 = df2[['lon','lat','day', 'rainfall','u-wind', 'v-wind', 'wind_speed', 'surface-p', 'dew-pt', '2m-temp', 'facebook_movement', 'log_facebook_movement', 'apple_driving', 'apple_walking', 'haze']]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d997aefe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "after_normalized_X_2 = sc_X.transform(before_normalized_X_2)\n",
+    "after_normalized_X_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a12ca05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap_values_ID2 = explainer.shap_values(after_normalized_X_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3614fa1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.summary_plot(shap_values_ID2[0], plot_type = 'bar', feature_names = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c62f10f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.dependence_plot('log_facebook_movement', shap_values_ID2[0], after_normalized_X_2, interaction_index = 'apple_driving', feature_names = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6376fcf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap.dependence_plot('apple_driving', shap_values_ID2[0], after_normalized_X_2, interaction_index = 'apple_walking', feature_names = feature_names)"
+   ]
   }
  ],
  "metadata": {
