--- a/code/5219_MLP_Explainability.ipynb
+++ b/code/5219_MLP_Explainability.ipynb
@@ -714,7 +714,7 @@
    "id": "f3249878",
    "metadata": {},
    "source": [
-    "### explain on monthly average for different countries"
+    "### Explain on monthly average for different countries"
    ]
   },
   {
@@ -795,7 +795,7 @@
    "id": "5bbe1a5b",
    "metadata": {},
    "source": [
-    "### Indonesia"
+    "### Explain on Indonesia"
    ]
   },
   {
