--- a/code/Movement_Data_Process.ipynb
+++ b/code/Movement_Data_Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89ba6407",
+   "id": "e24a9195",
    "metadata": {},
    "source": [
     "<font face=\"Times New Roman\" size=6 >\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68973b2a",
+   "id": "fb540160",
    "metadata": {},
    "source": [
     "# Facebook Movement between Tiles"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5eb3d93",
+   "id": "058750fc",
    "metadata": {},
    "source": [
     "## Source Code"
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa5fe89",
+   "id": "e030a985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e9556a",
+   "id": "80795964",
    "metadata": {},
    "source": [
     "### Read File"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15acb98b",
+   "id": "e95b1fc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c108237",
+   "id": "8161b7bc",
    "metadata": {},
    "source": [
     "### Merge File"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba26f18",
+   "id": "f3d17225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "\n",
     "# list file names\n",
     "for filename in os.listdir(path): # look for files in the folder\n",
-    "    if os.path.splitext(filename)[1] == filename_extenstion and filename != new_file_name: \n",
+    "    if os.path.splitext(filename)[1] == filename_extenstion:\n",
     "        t = os.path.splitext(filename)[0]\n",
     "        file_allname.append(path + '/' + t + filename_extenstion)  # restore csv suffix\n",
     "        \n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b67053",
+   "id": "104240ae",
    "metadata": {},
    "source": [
     "### Remove Rebundant Countries"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c417d1",
+   "id": "6c22ab55",
    "metadata": {
     "scrolled": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5e63b2a",
+   "id": "cada8018",
    "metadata": {},
    "source": [
     "### Assign Value to Grid"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04c46cef",
+   "id": "2b13ded4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b15c9b11",
+   "id": "fcec5e26",
    "metadata": {},
    "source": [
     "### Merge Files From All Countries"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0386dc97",
+   "id": "e08de8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,14 +266,6 @@
     "        else:\n",
     "            file_allname = []  # Store all file names ready for merge\n",
     "            for filename in os.listdir(path): # look for files in the folder\n",
-    "#             if month<10:\n",
-    "#                 if os.path.splitext(filename)[1] == filename_extenstion and str(year) + \"0\" + str(month) in filename: \n",
-    "#                     t = os.path.splitext(filename)[0]\n",
-    "#                     file_allname.append(path + '/' + t + filename_extenstion)  # restore csv suffix\n",
-    "#             else:\n",
-    "#                 if os.path.splitext(filename)[1] == filename_extenstion and str(year) + str(month) in filename: \n",
-    "#                     t = os.path.splitext(filename)[0]\n",
-    "#                     file_allname.append(path + '/' + t + filename_extenstion)  # restore csv suffix\n",
     "                if os.path.splitext(filename)[1] == filename_extenstion and \"Grid\" in filename and \"{}{:0>2d}\".format(year, month) in filename: \n",
     "                    t = os.path.splitext(filename)[0]\n",
     "                    file_allname.append(path + '/' + t + filename_extenstion)  # restore csv suffix\n",
@@ -293,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc80a82",
+   "id": "f4e09e91",
    "metadata": {},
    "source": [
     "### Drop Duplicates"
@@ -302,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94ae5bc3",
+   "id": "da6d87df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae721e2",
+   "id": "9c7fab1c",
    "metadata": {},
    "source": [
     "### For Case Study"
@@ -323,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1792e949",
+   "id": "e2919ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e68ee4d7",
+   "id": "ba9ba794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f85550d",
+   "id": "25e1e213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7614c9e2",
+   "id": "a514a4b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82dd413e",
+   "id": "b214d292",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -395,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b949aaae",
+   "id": "1c5e78d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db444d89",
+   "id": "3ec6eeee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,14 +433,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f02e44bf",
+   "id": "4c06a525",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1749a329",
+   "id": "09b3d69c",
    "metadata": {},
    "source": [
     "## Function"
@@ -456,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4624e69d",
+   "id": "d7682aea",
    "metadata": {},
    "source": [
     "### Make Folder Path"
@@ -465,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e0a9733",
+   "id": "59694c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee9ecb0d",
+   "id": "b682820b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c9cc579",
+   "id": "24cae9d5",
    "metadata": {},
    "source": [
     "### Process Mobility File"
@@ -505,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef957ab",
+   "id": "c7be6aeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8980eb1",
+   "id": "0351b6ce",
    "metadata": {},
    "source": [
     "### Auto Process"
@@ -673,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a30f21bd",
+   "id": "26749066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74cb1242",
+   "id": "6437daa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,24 +697,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96cb464f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Make_File_Path(\"E:\\GRADUATE STUDY\\GE5219\\Data\\Movement\\Processing\", countries_list):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de9d0fd4",
+   "id": "624c1c98",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "202da087",
+   "id": "b515c86f",
    "metadata": {
     "collapsed": true
    },
@@ -733,10 +715,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d4d514",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "ed5a55d7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# READ FILE\n",
@@ -748,23 +728,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97db4539",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "fffd2c0b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "regions = ['Singapore','Malaysia','Thailand','Laos','Vietnam','Philippines','Myanmar','Cambodia','Brunei']\n",
-    "df2 = df.loc[(df['region'] in regions]"
+    "df2 = df.loc[df['region'].isin(regions)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "312717b7",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "4678956e",
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfT = pd.DataFrame(df2.values.T, index=df2.columns, columns=df2.index)"
@@ -773,10 +749,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c255f9b",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "13a25fea",
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfT.drop(index = [\"geo_type\",\"alternative_name\",\"sub-region\",\"country\"], inplace = True)\n",
@@ -786,10 +760,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "691ccd95",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "f6b036c3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfT"
@@ -798,10 +770,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87316907",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "53b1c85b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "dfT.to_csv(\"applemobility.csv\", header = None)"
@@ -810,10 +780,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29611d8d",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "8ebafbd8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "filepath = \"applemobility.csv\"\n",
@@ -824,10 +792,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cc72f0c",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "ae16e092",
+   "metadata": {},
    "outputs": [],
    "source": [
     "reading.describe(percentiles=[.2,.75, .8],include='all')"
@@ -836,10 +802,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1528298",
-   "metadata": {
-    "collapsed": true
-   },
+   "id": "50c70330",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
